# minmaxlttb-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  checks.yml
crosscheck/: Cargo.toml
crosscheck/benches/: README.md  lttb_bench.rs  minmaxlttb_bench.rs
crosscheck/examples/: compare_tsdownsample.rs
crosscheck/tests/: lttb_rs.rs  tsdownsample.rs
docs/assets/: minmax_n5000_d100  minmax_n5000_d1000  minmax_n5000_d2000  minmax_n5000_d250  minmax_n5000_d500
examples/lttb_analysis/: Cargo.toml  README.md
examples/lttb_analysis/src/: main.rs
examples/minmax_vs_classic/: Cargo.toml  README.md
examples/minmax_vs_classic/src/: main.rs
examples/minmax_vs_standard/: Cargo.toml  README.md
examples/minmax_vs_standard/src/: main.rs
examples/minmaxlttb_analysis/: Cargo.toml  README.md
examples/minmaxlttb_analysis/src/: main.rs
examples/power/: Cargo.toml  README.md
examples/power/src/: main.rs
examples/timeseries/: Cargo.toml  README.md
examples/timeseries/src/: main.rs
minmaxlttb/: Cargo.toml
minmaxlttb/benches/: README.md  benches.rs  lttb_bench.rs  scale_benches.rs
minmaxlttb/examples/: lttb_parity.rs
minmaxlttb/src/: lib.rs
minmaxlttb/tests/: README.md  lttb_rs_compare.rs
upstream-compare/: Cargo.toml
upstream-compare/benches/: README.md  lttb_bench.rs
upstream-compare/src/: lib.rs
upstream-compare/tests/: README.md
