[workspace]
members = [
    "minmaxlttb",
    "examples/power",
    "examples/timeseries",
    "examples/minmax_vs_classic",
    "examples/minmaxlttb_analysis",
    "crosscheck",
]
exclude = ["target/*"]

resolver = "2"

default-members = [
    "minmaxlttb",
    "examples/power",
    "examples/timeseries",
    "examples/minmax_vs_classic",
    "examples/minmaxlttb_analysis",
]

[workspace.package]
version = "0.1.2"
authors = ["Andrei Gherghescu andrei-ng@protonmail.com"]
description = "MinMax Largest Triangle Three Buckets"
homepage = "https://github.com/andrei-ng/minmaxlttb-rs"
documentation = "https://docs.rs/minmaxlttb"
repository = "https://github.com/andrei-ng/minmaxlttb-rs"
keywords = ["lttb", "downsampling", "visualization", "timeseries"]
categories = ["algorithms", "visualization", "science"]
edition = "2021"
license = "MIT"
