[package]
name = "minmaxlttb"
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[dev-dependencies]
lttb = "0.2"
rand = "0.9"
criterion = "0.7"

[[bench]]
name = "benches"
harness = false
