[package]
name = "minmaxlttb"
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]

[dev-dependencies]
lttb = "0.2"
rand = "0.9"
criterion = "0.8"

[[bench]]
name = "benches"
harness = false
