[package]
name = "upstream_compare"
version = "0.1.0"
edition = "2021"

[dependencies]
minmaxlttb = { path = "../minmaxlttb" }
rand = "0.9"
plotly = "0.13"
csv = "1"

[dev-dependencies]
downsample_rs = { git = "https://github.com/predict-idlab/tsdownsample", package = "downsample_rs", rev = "v0.1.4.1" }
lttb = "0.2"

[lib]
path = "src/lib.rs"

[[example]]
name = "compare_tsdownsample"
path = "examples/compare_tsdownsample.rs"
