[package]
name = "example_lttb_analysis"
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
minmaxlttb = { path = "../../minmaxlttb" }
csv = "1.3"
plotly = "0.13"
clap = { version = "4.5", features = ["derive"] }
