[package]
name = "example_power"
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
minmaxlttb = { path = "../../minmaxlttb" }
csv = "1.3"
chrono = "0.4"
num-format = "0.4"
plotly = "0.13"
rayon = "1.10"
reqwest = { version = "0.13", features = ["blocking"] }
zip = "7.0"
