[package]
name = "example_timeseries"
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
minmaxlttb = { path = "../../minmaxlttb" }
plotly = "0.14"
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
